# agentic-search-rs

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  events.rs  lib.rs  retry.rs
crates/core/src/agent/: evaluator.rs  gatherer.rs  knowledge.rs  mod.rs  planner.rs  prompts.rs  reporter.rs
crates/core/src/fetch/: extract.rs  guard.rs  mod.rs
crates/core/src/llm/: claude.rs  json.rs  mod.rs  ollama.rs  openai.rs
crates/core/src/search/: duckduckgo.rs  mod.rs  searxng.rs  serper.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  history.rs  main.rs  runner.rs
docs/: agentic-architecture.md  architecture.md  configuration.md  design-rationale.md  development.md  issues.md  security.md  user-guide.md
learn/: cli-implementation.md  gui-implementation.md
